Enabled modern grids

--- a/styleguide/scss/_config.scss
+++ b/styleguide/scss/_config.scss
@@ -38,7 +38,7 @@ $support-all-browsers: true;
 //        - Oldest mobile browsers: iOS Safari 9.2, 
 //          Android: Opera Mobile 37, webview 50, Chrome 49, Firefox 31
 //
-$support-newest-browsers: false;
+$support-newest-browsers: true;
 
 // For the smallest generated CSS file size, disable both $support-all-browsers
 // and $support-newest-browsers, and configure your grids in SCSS using the
