Added some config comments

--- a/styleguide/scss/_config.scss
+++ b/styleguide/scss/_config.scss
@@ -2,24 +2,28 @@
 //  $CONFIG
 //------------------------------------//
 
-//-----------------------------------------------------------------------//
-// Control page widths, colors, font families, and much more by changing
-// and adding variables here. Required items are noted.
-//-----------------------------------------------------------------------//
+// SFUMATO VERSION
+// ==================================================================
 
-// sfumato version number
 $sfumato-version: "1.0.1";
-
 // sfumato Version can be displayed using <span id="sfumato-version" role="status"></span>
 span#sfumato-version[role="status"]::after {
 
     content: quote($sfumato-version);
 }
 
+
+// BROWSER SUPPORT AND CSS FILE SIZE
+// ==================================================================
+// Changing these values determines which browsers you will support,
+// and the file size of the generated CSS file.
+
 // Legacy browser support
-//
+// ------------------------------------------------------------------
 // true:  Support browsers from 2013 and later; 
-//        creates a larger CSS file and fewer sizing options.
+//        creates a larger CSS file with fewer sizing options
+//        (see the _config-measurements.scss file for details);
+//        enables automatic grid tag attributes like sf-tabp-gutters="".
 //
 //        - Oldest desktop browsers: IE11, Edge 12, Chrome 29, 
 //          Firefox 28, Opera 17, Safari 9
@@ -29,9 +33,10 @@ span#sfumato-version[role="status"]::after {
 $support-all-browsers: true;
 
 // Newest browser support
-//
+// ------------------------------------------------------------------
 // true:  Support browsers from 2016 and later;
-//        creates a smaller CSS file.
+//        creates a smaller CSS file; enables use of 
+//        CSS custom properties.
 //
 //        - Oldest desktop browsers: Edge 15, Chrome 49, 
 //          Firefox 31, Opera 36, Safari 9
@@ -40,10 +45,11 @@ $support-all-browsers: true;
 //
 $support-newest-browsers: true;
 
+// NOTE:
+// ------------------------------------------------------------------
 // For the smallest generated CSS file size, disable both $support-all-browsers
 // and $support-newest-browsers, and configure your grids in SCSS using the
 // manual grid mode helpers.
-
 
 
 // Load all configuration files
