--- a/styleguide/scss/_config-measurements.scss
+++ b/styleguide/scss/_config-measurements.scss
@@ -2,26 +2,29 @@
 // $CONFIG-MEASUREMENTS
 //-----------------------------------------------------------------------//
 
-// RANGES
-// These ranges will reduce or increase the granularity of the selectors 
-// you can use in your HTML attributes and SCSS code and significantly 
-// reduce or increase the size of your generated CSS.
-
 // GRID COLUMN COUNT BASE.
+// ==================================================================
 // This is the maximum number of columns supported.
 // The default is 12.
 $base-column-count: 12;
 
+
+// LEGACY AUTOMATIC FLEXBOX GRID FEATURES
+// ==================================================================
+// These ranges will reduce or increase the granularity of the selectors 
+// you can use in your HTML attributes and SCSS code and significantly 
+// reduce or increase the size of your generated CSS.
+
 @if ($support-all-browsers) {
 
-    // LEGACY AUTOMATIC FLEXBOX GRID FEATURES
-    // ==================================================================
+    // GUTTERS
+    // ------------------------------------------------------------------
 
     // Gutters can be 0 to this value as a percentage.
-    // (e.g. sf-gutters="2.5%")
+    // (e.g. sf-tabp-gutters="2.5%")
     // Use the increment below to create a more granular range.
     // A smaller value yields smaller generated CSS code.
-    // Set to 0 to disable if you're not using this feature.
+    // IMPORTANT: Set to 0 to disable if you're not using this feature.
     $highest-gutter-percentage: 7 !global;
     // A larger value yields smaller generated CSS code.
     // Use 1.0 to only use whole numbers.
@@ -30,27 +33,33 @@ $base-column-count: 12;
     // Gutters can be 0 to this value as rems.
     // (e.g. sf-tabp-gutters="1.5rem")
     // A smaller value yields smaller generated CSS code.
-    // Set to 0 to disable if you're not using this feature.
+    // IMPORTANT: Set to 0 to disable if you're not using this feature.
     $highest-gutter-rem: 0 !global;
     // A larger value yields smaller generated CSS code.
     // Use 1.0 to only use whole numbers.
     $gutter-rem-increment: 1.0 !global;
 
+    // ROW GUTTERS
+    // ------------------------------------------------------------------
+
     // Row gutters can be 0 to this value as rems.
     // (e.g. sf-tabp-row-gutters="2rem")
     // Use the increment below to create a more granular range.
     // A smaller value yields smaller generated CSS code.
-    // Set to 0 to disable if you're not using this feature.
+    // IMPORTANT: Set to 0 to disable if you're not using this feature.
     $highest-row-gutter-rem: 3 !global;
     // A larger value yields smaller generated CSS code.
     // Use 1.0 to only use whole numbers.
     $row-gutter-rem-increment: 0.25 !global;
 
+    // GRID CELL WIDTH PERCENTAGES
+    // ------------------------------------------------------------------
+
     // Grid cells can be 0 to this value as a percentage.
     // (e.g. sf-tabp-width="4.5%")
     // Use the increment below to create a more granular range.
     // A smaller value yields smaller generated CSS code.
-    // Set to 0 to disable if you're not using this feature.
+    // IMPORTANT: Set to 0 to disable if you're not using this feature.
     $highest-width-percentage: 0 !global;
     // A larger value yields smaller generated CSS code.
     // Use 1.0 to only use whole numbers.
@@ -58,9 +67,11 @@ $base-column-count: 12;
 }
 
 // SIZES
+// ==================================================================
 // Following are various sizes for unit margins, line thicknesses, etc.
 
 // Line Widths:
+// ------------------------------------------------------------------
 // Used by the style guide layout to define line thicknesses for borders, 
 // <hr> tags, etc. Use rem units
 $mobile-lw-1px:  0.08rem;
@@ -68,6 +79,7 @@ $lw-1px:  0.08rem;
 
 
 // OUTER UNIT MEASUREMENTS
+// ------------------------------------------------------------------
 // These are the block containers marked "sf-unit" that you stack to create your UX.
 
 // <main>
@@ -110,6 +122,7 @@ $elastic-vertical-unit-padding: 4rem;
 
 
 // INNER UNIT MEASUREMENTS
+// ------------------------------------------------------------------
 // These are the inner block containers that you stack to create your content UX.
 
 // <section sf-unit>
@@ -133,6 +146,7 @@ $desktop-vertical-subunit-padding: 3rem;
 $elastic-vertical-subunit-padding: 3rem;
 
 // FORMS
+// ==================================================================
 // Sizes for various form elements, like fieldset row spacing.
 
 // Applies to [role="row"]
