Removed test file

--- a/styleguide/scss/_config-measurements.scss
+++ b/styleguide/scss/_config-measurements.scss
@@ -109,7 +109,7 @@ $elastic-horizontal-unit-padding: 5rem;
 $elastic-vertical-unit-padding: 4rem;
 
 
-// INNER UNIT MEASUREMENTS
+// INNER (sub)UNIT MEASUREMENTS
 // ------------------------------------------------------------------
 // These are the inner block containers that you stack to create your content UX.
 
@@ -132,6 +132,7 @@ $tablet-landscape-vertical-subunit-padding: 3rem;
 $notebook-vertical-subunit-padding: 3rem;
 $desktop-vertical-subunit-padding: 3rem;
 $elastic-vertical-subunit-padding: 3rem;
+
 
 // FORMS
 // ==================================================================
