--- a/styleguide/scss/core/_core-forms.scss
+++ b/styleguide/scss/core/_core-forms.scss
@@ -487,7 +487,7 @@ form, [role="form"] {
 
             @include sf-internet-explorer-11() {
 
-                padding-left: 1.75rem;
+                padding-left: 2rem;
             }
 
             span:not([sf-wrapper]) {
@@ -504,27 +504,28 @@ form, [role="form"] {
                 font-size: 0;
                 vertical-align: top;
 
-                border-radius: 0.1rem;
-        
-                margin-left: -3rem;
-                margin-right: 0.8rem;
-                height: 0.2rem;
-                top: 0.65rem;
-        
-                background-color: #cdcdcd;
+                margin-left: -2.93rem;
+                margin-right: 0.75rem;
+
                 background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+                background-color: transparent;
+                border: solid $mobile-lw-1px #cdcdcd;
+                border-radius: 0.65rem;
+                height: calc(1.4rem - #{$mobile-lw-1px});
 
                 @include sf-media($from: tablet-portrait) {
 
                     border-width: $lw-1px;
+                    margin-right: 0.7rem;
+                    height: calc(1.4rem - #{$lw-1px});
                 }
 
                 @include sf-internet-explorer-11() {
 
                     top: 0.15rem;
                     vertical-align: top;
-                    margin-left: -1.75rem;
-                    margin-right: 0.6rem;
+                    margin-left: -2rem;
+                    margin-right: 0;
                     padding: 0;
                     border: 0;
                     border-radius: 0;
@@ -545,21 +546,22 @@ form, [role="form"] {
                     outline: none;
 
                     vertical-align: top;
-                    width: 1.2rem;
-                    height: 1.2rem;
-                    top: -0.5rem;
+                    width: calc(1.4rem - #{$mobile-lw-1px * 1.5});
+                    height: calc(1.4rem - #{$mobile-lw-1px * 1.5});
+                    top: ($mobile-lw-1px / 2) * -1;
 
-                    margin-right: 1rem;
+                    margin-right: 0.8rem;
+                    margin-left: $mobile-lw-1px * -1;
 
                     @include sf-internet-explorer-11() {
 
                         vertical-align: top;
-                        width: 1rem;
-                        margin-right: 0;
+                        margin-left: 0.08rem;
+                        margin-right: 0.65rem;
                     }
 
-                    font-size: 1rem;
-                    line-height: 1;
+                    font-size: 0;
+                    line-height: 0;
 
                     background-color: sf-get-color(graylight);
                     border-radius: 50%;
@@ -570,6 +572,10 @@ form, [role="form"] {
                     @include sf-media($from: tablet-landscape) {
 
                         border-width: $lw-1px;
+                        width: calc(1.4rem - #{$lw-1px * 1.5});
+                        height: calc(1.4rem - #{$lw-1px * 1.5});
+                        margin-left: $lw-1px * -1;
+                        top: ($lw-1px / 2) * -1;
                     }
 
                     &:checked {
@@ -577,12 +583,19 @@ form, [role="form"] {
                         color: sf-get-color(blue);
                         background-color: sf-get-color(blue);
                         border: none;
-                        margin-right: 0;
-                        margin-left: 0.98rem;
+                        margin-right: $mobile-lw-1px * -1;
+                        margin-left: 0.8rem;
 
                         @include sf-internet-explorer-11() {
 
-                            margin-left: 0;
+                            vertical-align: top;
+                            margin-left: 0.08rem;
+                            margin-right: 0.65rem;
+                        }
+    
+                        @include sf-media($from: tablet-landscape) {
+
+                            margin-right: $lw-1px * -1;
                         }
                     }
                 }
@@ -601,16 +614,17 @@ form, [role="form"] {
 
                     margin-left: -2.05rem;
                     margin-bottom: 0.1rem;
+                    margin-right: 0.72rem;
                     vertical-align: top;
 
                     height: auto;
-                    top: 0.1rem;
+                    top: 0;
                     background-color: transparent;
 
                     @include sf-internet-explorer-11() {
         
                         margin-left: -2rem;
-                        margin-right: 0.65rem;
+                        margin-right: 0.75rem;
                     }
     
                     input[type="radio"] {
@@ -626,6 +640,7 @@ form, [role="form"] {
                         vertical-align: text-top;
                         width: 1.2rem;
                         height: 1.2rem;
+                        margin-left: 0.08rem;
 
                         font-size: 1rem;
                         line-height: 1;
@@ -635,6 +650,11 @@ form, [role="form"] {
                         border: $mobile-lw-1px solid $form-field-line-color;
     
                         cursor: pointer;
+
+                        @include sf-microsoft-edge() {
+
+                            top: 0.08rem;
+                        }
     
                         @include sf-media($from: tablet-landscape) {
     
