Added sf-elastic-wrapper to core layout

--- a/styleguide/scss/core/_core-layout.scss
+++ b/styleguide/scss/core/_core-layout.scss
@@ -391,7 +391,7 @@ body {
     //------------------------------------//
     //  PRIMARY SITE WRAPPER
     //------------------------------------//
-    header, main, footer {
+    [sf-elastic-wrapper] {
 
         @if (nth(map-get($media-breakpoints, elastic), 1) != false) {
 
