Implemented full unit pattern in styleguide

--- a/styleguide/scss/core/_core-layout.scss
+++ b/styleguide/scss/core/_core-layout.scss
@@ -470,14 +470,9 @@ body {
 
 main, header, footer {
 
-    & > [sf-unit] {
+    & > [sf-unit], &[sf-unit] {
 
         &:not(:last-of-type) {
-
-            @include set-bottom-unit-padding();
-        }
-
-        &, &:last-of-type {
 
             @include set-bottom-unit-padding();
         }
