--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -6,31 +6,24 @@ body {
 
     & > header {
 
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-
-        @include sf-media($from: tablet-portrait) {
-
-            padding-top: 3rem;
-            padding-bottom: 3rem;
-        }
+        @include set-bottom-unit-padding();
     }
 
     #logo, #logo-sample {
 
-        padding: 0 $horizontal-unit-padding;
+        // padding: 0 $horizontal-unit-padding;
 
-        @include sf-media($from: tablet-portrait) {
+        // @include sf-media($from: tablet-portrait) {
 
-            padding: 0 $tablet-portrait-horizontal-unit-padding;
-        }
+        //     padding: 0 $tablet-portrait-horizontal-unit-padding;
+        // }
 
         // Manual breakpoint to keep logo bar items indented 
         // a little wider than the elastic breakpoint.
-        @media screen and (min-width: 79.6875em) {
+        // @media screen and (min-width: 79.6875em) {
 
-            padding: 0;
-        }
+        //     padding: 0;
+        // }
 
         [role="grid"] {
 
