Grids default to grow

--- a/styleguide/scss/core/_core-flexbox-grid.scss
+++ b/styleguide/scss/core/_core-flexbox-grid.scss
@@ -47,7 +47,7 @@
 
     $sf-fbg-flex-direction: $gridcell-direction !global;
     $sf-fbg-flex-wrap: nowrap !global;
-    $sf-fbg-flex-grow: initial !global;
+    $sf-fbg-flex-grow: 1 !global;
     $sf-fbg-flex-shrink: initial !global;
 
     $sf-fbg-gridcell-display: block !global;
