--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -474,7 +474,7 @@ body { position: relative; }
 
 body [sf-elastic-wrapper] { max-width: 1200px; margin-left: auto; margin-right: auto; }
 
-[role="grid"] { display: flex; position: relative; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; flex-grow: initial; flex-shrink: initial; flex-wrap: wrap; flex-direction: row; align-items: flex-start; justify-content: flex-start; margin: 0; }
+[role="grid"] { display: flex; position: relative; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; flex-grow: 1; flex-shrink: initial; flex-wrap: wrap; flex-direction: row; align-items: flex-start; justify-content: flex-start; margin: 0; }
 
 [role="grid"] > [role="gridcell"] { display: block; position: relative; flex-direction: initial; justify-content: initial; flex-grow: 0; flex-shrink: initial; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; height: auto; width: 100%; }
 
