Eception added for first inner-wrapper child if grid

--- a/styleguide/scss/core/_core-layout.scss
+++ b/styleguide/scss/core/_core-layout.scss
@@ -490,7 +490,7 @@ main, header, footer {
 
                 @include set-top-unit-padding();
 
-                & > * {
+                & > *:not([role="grid"]) {
 
                     &:first-child {
 
