--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -1096,6 +1096,12 @@ body [sf-elastic-wrapper] { max-width: 1200px; margin-left: auto; margin-right: 
 
 [role="grid"][sf-centered] > [role="gridcell"] > * { height: 100%; display: flex; flex-direction: row; align-items: center; justify-content: center; }
 
+[role="grid"][sf-col="0"], [role="grid"] > [role="gridcell"][sf-col="0"] { width: 0%; flex-grow: 0; }
+
+[role="grid"][sf-push-col="0"], [role="grid"] > [role="gridcell"][sf-push-col="0"] { left: 0%; }
+
+[role="grid"][sf-pull-col="0"], [role="grid"] > [role="gridcell"][sf-pull-col="0"] { right: 0%; }
+
 [role="grid"][sf-col="1"], [role="grid"] > [role="gridcell"][sf-col="1"] { width: 8.33333%; flex-grow: 0; }
 
 [role="grid"][sf-push-col="1"], [role="grid"] > [role="gridcell"][sf-push-col="1"] { left: 8.33333%; }
@@ -1519,6 +1525,9 @@ body [sf-elastic-wrapper] { max-width: 1200px; margin-left: auto; margin-right: 
   [role="grid"][sf-tabp-equal-heights] > [role="gridcell"] > * { height: 100%; }
   [role="grid"][sf-tabp-centered] { align-items: stretch; }
   [role="grid"][sf-tabp-centered] > [role="gridcell"] > * { height: 100%; display: flex; flex-direction: row; align-items: center; justify-content: center; }
+  [role="grid"][sf-tabp-col="0"], [role="grid"] > [role="gridcell"][sf-tabp-col="0"] { width: 0%; flex-grow: 0; }
+  [role="grid"][sf-tabp-push-col="0"], [role="grid"] > [role="gridcell"][sf-tabp-push-col="0"] { left: 0%; }
+  [role="grid"][sf-tabp-pull-col="0"], [role="grid"] > [role="gridcell"][sf-tabp-pull-col="0"] { right: 0%; }
   [role="grid"][sf-tabp-col="1"], [role="grid"] > [role="gridcell"][sf-tabp-col="1"] { width: 8.33333%; flex-grow: 0; }
   [role="grid"][sf-tabp-push-col="1"], [role="grid"] > [role="gridcell"][sf-tabp-push-col="1"] { left: 8.33333%; }
   [role="grid"][sf-tabp-pull-col="1"], [role="grid"] > [role="gridcell"][sf-tabp-pull-col="1"] { right: 8.33333%; }
@@ -1886,6 +1895,9 @@ body [sf-elastic-wrapper] { max-width: 1200px; margin-left: auto; margin-right: 
   [role="grid"][sf-elas-equal-heights] > [role="gridcell"] > * { height: 100%; }
   [role="grid"][sf-elas-centered] { align-items: stretch; }
   [role="grid"][sf-elas-centered] > [role="gridcell"] > * { height: 100%; display: flex; flex-direction: row; align-items: center; justify-content: center; }
+  [role="grid"][sf-elas-col="0"], [role="grid"] > [role="gridcell"][sf-elas-col="0"] { width: 0%; flex-grow: 0; }
+  [role="grid"][sf-elas-push-col="0"], [role="grid"] > [role="gridcell"][sf-elas-push-col="0"] { left: 0%; }
+  [role="grid"][sf-elas-pull-col="0"], [role="grid"] > [role="gridcell"][sf-elas-pull-col="0"] { right: 0%; }
   [role="grid"][sf-elas-col="1"], [role="grid"] > [role="gridcell"][sf-elas-col="1"] { width: 8.33333%; flex-grow: 0; }
   [role="grid"][sf-elas-push-col="1"], [role="grid"] > [role="gridcell"][sf-elas-push-col="1"] { left: 8.33333%; }
   [role="grid"][sf-elas-pull-col="1"], [role="grid"] > [role="gridcell"][sf-elas-pull-col="1"] { right: 8.33333%; }
@@ -1944,11 +1956,11 @@ body [sf-elastic-wrapper] { max-width: 1200px; margin-left: auto; margin-right: 
   [role="grid"][sf-elas-width-auto], [role="grid"] > [role="gridcell"][sf-elas-width-auto], [role="grid"][sf-elas-width-auto="1"], [role="grid"] > [role="gridcell"][sf-elas-width-auto="1"], [role="grid"][sf-elas-width-auto="true"], [role="grid"] > [role="gridcell"][sf-elas-width-auto="true"] { width: auto; flex-grow: 1; }
   [role="grid"][sf-elas-width-auto="0"], [role="grid"] > [role="gridcell"][sf-elas-width-auto="0"], [role="grid"][sf-elas-width-auto="false"], [role="grid"] > [role="gridcell"][sf-elas-width-auto="false"] { flex-grow: 0; } }
 
-* > [sf-unit]:not(:last-of-type), *[sf-unit]:not(:last-of-type) { padding-bottom: 3rem; }
+* > [sf-unit], *[sf-unit] { padding-bottom: 3rem; }
 
-@media screen and (min-width: 33.75em) { * > [sf-unit]:not(:last-of-type), *[sf-unit]:not(:last-of-type) { padding-bottom: 4rem; } }
+@media screen and (min-width: 33.75em) { * > [sf-unit], *[sf-unit] { padding-bottom: 4rem; } }
 
-@media screen and (min-width: 75em) { * > [sf-unit]:not(:last-of-type), *[sf-unit]:not(:last-of-type) { padding-bottom: 4rem; } }
+@media screen and (min-width: 75em) { * > [sf-unit], *[sf-unit] { padding-bottom: 4rem; } }
 
 * > [sf-unit] > [sf-outer-wrapper], *[sf-unit] > [sf-outer-wrapper] { margin-left: auto; margin-right: auto; max-width: 1200px; padding-left: 1.25rem; padding-right: 1.25rem; }
 
@@ -2165,11 +2177,7 @@ body > main > section[separator] { padding-bottom: 3rem; }
 
 @media screen and (min-width: 75em) { body > main > section[separator] { padding-bottom: 4rem; } }
 
-body > main > [sf-unit] { padding-bottom: 3rem; color: #2b303a; background-color: #ffffff; overflow: hidden; }
-
-@media screen and (min-width: 33.75em) { body > main > [sf-unit] { padding-bottom: 4rem; } }
-
-@media screen and (min-width: 75em) { body > main > [sf-unit] { padding-bottom: 4rem; } }
+body > main > [sf-unit] { color: #2b303a; background-color: #ffffff; overflow: hidden; }
 
 body > main > [sf-unit] a:not([role="button"]) { color: #1187ff; }
 
