--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -6,12 +6,13 @@ body {
 
     & > header {
 
-        @include set-bottom-unit-padding();
+        &[sf-unit] {
 
-        @include sf-media($upto: tablet-portrait) {
+            @include sf-media($upto: tablet-portrait) {
 
-            padding-bottom: 0;
-        }        
+                padding-bottom: 0;
+            }
+        }
     }
 
     #logo, #logo-sample {
