--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -474,6 +474,16 @@ body { position: relative; }
 
 body [sf-elastic-wrapper] { max-width: 1200px; margin-left: auto; margin-right: auto; }
 
+[sf-hide] { display: none !important; }
+
+@media screen and (min-width: 33.75em) { [sf-hide-tabp-and-up] { display: none !important; } }
+
+@media screen and (max-width: 33.74em) { [sf-hide-below-tabp] { display: none !important; } }
+
+@media screen and (min-width: 75em) { [sf-hide-elas-and-up] { display: none !important; } }
+
+@media screen and (max-width: 74.99em) { [sf-hide-below-elas] { display: none !important; } }
+
 [role="grid"] { display: flex; position: relative; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; flex-grow: 1; flex-shrink: initial; flex-wrap: wrap; flex-direction: row; align-items: flex-start; justify-content: flex-start; margin: 0; }
 
 [role="grid"] > [role="gridcell"] { display: block; position: relative; flex-direction: initial; justify-content: initial; flex-grow: 0; flex-shrink: initial; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; height: auto; width: 100%; }
@@ -2106,13 +2116,7 @@ body > main [role="grid"][id$="-grid"] [role="gridcell"] > section:not([role="gr
 
 body > main [role="grid"][id$="-grid"]#nested-grid > [role="gridcell"]:first-of-type { background-color: transparent; }
 
-body > header { padding-bottom: 3rem; }
-
-@media screen and (min-width: 33.75em) { body > header { padding-bottom: 4rem; } }
-
-@media screen and (min-width: 75em) { body > header { padding-bottom: 4rem; } }
-
-@media screen and (max-width: 33.74em) { body > header { padding-bottom: 0; } }
+@media screen and (max-width: 33.74em) { body > header[sf-unit] { padding-bottom: 0; } }
 
 body #logo [role="grid"] > [role="gridcell"]:nth-child(1), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) { margin-right: 1%; width: 15%; }
 
