--- a/styleguide/scss/core/_core-animation.scss
+++ b/styleguide/scss/core/_core-animation.scss
@@ -9,23 +9,31 @@
 //-----------------------------------------------------------------------//
 
 @mixin sf-animate (
-    $property:all,
+    $property: all,
+    $delay: 0,
     $duration: 0.5s,
-    $kind:ease
+    $kind: ease
 ) {
 
     -moz-transition-property: $property;
     -o-transition-property: $property;
     -webkit-transition-property: $property;
     transition-property: $property;
+
     -moz-transition-duration: $duration;
     -o-transition-duration: $duration;
     -webkit-transition-duration: $duration;
     transition-duration: $duration;
+
     -moz-transition-timing-function: $kind;
     -o-transition-timing-function: $kind;
     -webkit-transition-timing-function: $kind;
     transition-timing-function: $kind;
+
+    -moz-animation-delay: $delay;
+    -o-animation-delay: $delay;
+    -webkit-animation-delay: $delay;
+    animation-delay: $delay;
 }
 
 
