--- a/styleguide/scss/_config.scss
+++ b/styleguide/scss/_config.scss
@@ -53,7 +53,7 @@ $support-newest-browsers: true;
 
 
 // Load all configuration files
-@import "config-breakpoints";
+@import "config-media-breakpoints";
 @import "config-colors";
 @import "config-typography";
 @import "config-measurements";
