Inline <code> now vertical align top

--- a/styleguide/scss/core/_core-initialize.scss
+++ b/styleguide/scss/core/_core-initialize.scss
@@ -449,7 +449,11 @@ html {
 
     pre, code {
         
-        vertical-align: middle;
         font-family: $font-mono;
+    }
+
+    code {
+        
+        vertical-align: top;
     }
 }
